Fix hiding colum: ie: if _xs-12_md-0 xs must be visible

--- a/src/gridlex.less
+++ b/src/gridlex.less
@@ -158,26 +158,46 @@
     HIDING COLS
 *************************/
 @media @gl-lg{
-  [class*="@{gl-colName}-"][class*="_lg-0"],
-  [class*="@{gl-gridName}-"][class*="-equalHeight"] > [class*="@{gl-colName}-"][class*="_lg-0"]{
-    display: none;
+  [class*='@{gl-gridName}'] {
+    >[class*="_xs-0"],>[class*="_sm-0"],>[class*="_md-0"]{
+      display: block;
+    }
+    >[class*="_lg-0"],
+    &[class*="-equalHeight"] > [class*="_lg-0"]{
+      display: none;
+    }
   }
 }
 @media @gl-md{
-  [class*="@{gl-colName}-"][class*="_md-0"],
-  [class*="@{gl-gridName}-"][class*="-equalHeight"] > [class*="@{gl-colName}-"][class*="_md-0"]{
-    display: none;
+  [class*='@{gl-gridName}'] {
+    >[class*="_xs-0"],>[class*="_sm-0"],>[class*="_lg-0"]{
+      display: block;
+    }
+    >[class*="_md-0"],
+    &[class*="-equalHeight"] > [class*="_md-0"]{
+      display: none;
+    }
   }
 }
 @media @gl-sm{
-  [class*="@{gl-colName}-"][class*="_sm-0"],
-  [class*="@{gl-gridName}-"][class*="-equalHeight"] > [class*="@{gl-colName}-"][class*="_sm-0"]{
-    display: none;
+  [class*='@{gl-gridName}'] {
+    >[class*="_xs-0"]>[class*="_md-0"],>[class*="_lg-0"]{
+      display: block;
+    }
+    >[class*="_sm-0"],
+    &[class*="-equalHeight"] > [class*="_sm-0"]{
+      display: none;
+    }
   }
 }
 @media @gl-xs{
-  [class*="@{gl-colName}-"][class*="_xs-0"],
-  [class*="@{gl-gridName}-"][class*="-equalHeight"] > [class*="@{gl-colName}-"][class*="_xs-0"]{
-    display: none;
+  [class*='@{gl-gridName}'] {
+    >[class*="_sm-0"],>[class*="_md-0"],>[class*="_lg-0"]{
+      display: block;
+    }
+    >[class*="_xs-0"],
+    &[class*="-equalHeight"] > [class*="_xs-0"]{
+      display: none;
+    }
   }
 }
